WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
249768
RemoteGraphicsContextGL accesses work queue in inconsistent manner
https://bugs.webkit.org/show_bug.cgi?id=249768
Summary
RemoteGraphicsContextGL accesses work queue in inconsistent manner
Kimmo Kinnunen
Reported
2022-12-22 04:22:32 PST
RemoteGraphicsContextGL accesses work queue in inconsistent manner Should use just workQueue() accessor.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-12-22 04:47:52 PST
<
rdar://problem/103634573
>
Kimmo Kinnunen
Comment 2
2022-12-22 04:53:11 PST
Pull request:
https://github.com/WebKit/WebKit/pull/8001
EWS
Comment 3
2023-01-10 00:24:08 PST
Committed
258705@main
(61a2cad10a14): <
https://commits.webkit.org/258705@main
> Reviewed commits have been landed. Closing PR #8001 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug