RemoteGraphicsContextGL accesses work queue in inconsistent manner https://bugs.webkit.org/show_bug.cgi?id=249768 rdar://103634573

Reviewed by Matt Woodrow.

Make RemoteGraphicsContextGL more consistent by using workQueue() everywhere to
access the queue.

Initialize the shared work queue in thread-safe manner, even though currently it's
not initialized from multiple threads.

Store the work queue reference as a member variable to avoid querying the global
variable with the implicit static variable locks.

* Source/WebKit/GPUProcess/graphics/RemoteGraphicsContextGL.cpp:
(WebKit::remoteGraphicsContextGLStreamWorkQueue):
(WebKit::RemoteGraphicsContextGL::RemoteGraphicsContextGL):
(WebKit::RemoteGraphicsContextGL::initialize):
(WebKit::RemoteGraphicsContextGL::stopListeningForIPC):
(WebKit::RemoteGraphicsContextGL::displayWasReconfigured):
(WebKit::RemoteGraphicsContextGL::workQueueInitialize):
* Source/WebKit/GPUProcess/graphics/RemoteGraphicsContextGL.h:
(WebKit::RemoteGraphicsContextGL::workQueue const):

Canonical link: https://commits.webkit.org/258705@main